# fpga-accelerated-dsp

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  datacollection.cpp  lmsDemo.cpp  main.cpp  toolchain_clang_crosscomp_arm.cmake
dmatest/: dmatest.c  test.c
filters/: CMakeLists.txt  leakyIntegrator.h  lms.h
filters/lms/: lms.h
lib_optrode/: SerialPort.cpp  axi_dma.c  axi_dma.h
optrode/: AxiStreamDma.cpp  AxiStreamDma.h  CMakeLists.txt  board.cpp  board.h  config.h  datawriter.h  main.cpp  ui.cpp  ui.h
